--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </svg>
 
     <div class="l-container">
-      <header class="c-header">
+      <header class="c-header u-border">
         <a href="https://rocont.ru/"
           ><img src="/images/logo.svg" alt="логотип компании ROCONT"
         /></a>
@@ -61,14 +61,14 @@
         </nav>
       </header>
       <main>
-        <section class="c-hero">
+        <section class="c-hero u-border">
           <video
             src="/videos/hero.mp4"
             autoplay
             muted
             loop
             playsinline
-            class="c-hero__video"></video>
+            class="c-hero__video u-border"></video>
 
           <div class="c-hero__content u-padding">
             <div class="c-hero__content-left">
@@ -114,7 +114,7 @@
           </div>
           <div class="c-slider__cards">
             <article
-              class="card-gradient"
+              class="card-gradient u-border"
               style="--bg-img: url('/images/img1.jpg')">
               <div>
                 <h4 class="u-h4__title">Немного упругости</h4>
@@ -123,12 +123,18 @@
                 </p>
               </div>
             </article>
-            <article style="--bg-img: url('/images/img2.jpg')"></article>
-            <article style="--bg-img: url('/images/img3.jpg')"></article>
-            <article style="--bg-img: url('/images/img4.jpg')"></article>
+            <article
+              class="u-border"
+              style="--bg-img: url('/images/img2.jpg')"></article>
+            <article
+              class="u-border"
+              style="--bg-img: url('/images/img3.jpg')"></article>
+            <article
+              class="u-border"
+              style="--bg-img: url('/images/img4.jpg')"></article>
           </div>
         </section>
-        <section class="c-form u-section">
+        <section class="c-form u-section u-border">
           <div class="c-form__left u-padding">
             <h2 class="u-h2__title">
               Если вы тоже решили <br />«а почему бы и нет»
@@ -170,7 +176,7 @@
           </form>
         </section>
         <section class="c-contacts u-section">
-          <div class="c-contacts__info u-padding">
+          <div class="c-contacts__info u-padding u-border">
             <h2 class="u-h2__title">Контакты</h2>
             <ul class="u-lead_text">
               <li>
@@ -206,6 +212,7 @@
           </div>
           <div class="c-contacts__map">
             <iframe
+              class="u-border"
               src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7337.497231943171!2d37.619395871313685!3d55.75203359942814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2spl!4v1752481454135!5m2!1sru!2spl"
               allowfullscreen=""
               referrerpolicy="no-referrer-when-downgrade"></iframe>
